test/Fail/Issue1436-21.err
Issue1436-21.agda:19.7-16: error: [NoParseForApplication]
Could not parse the application • + • + •
Operators used in the grammar:
  + (infix operator, level 20) [_+_ (Issue1436-21.agda:7.5-8), 
                                _+_ (Issue1436-21.agda:13.5-8)]
when scope checking • + • + •
